# proton-sandbox

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE
include/: application.h
src/: application.cpp  entrypoint.cpp
